// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleBar renders correctly when no name or description 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="jsx-1141087211 "
        data-test="dashboard-title-input"
      >
        <label
          class="jsx-2718078600 "
          data-test="dashboard-title-input-label"
          for="Dashboard title input"
        >
          <span
            class="jsx-2718078600"
          >
            Dashboard title
          </span>
        </label>
        <div
          class="jsx-3111771310 "
          data-test="dashboard-title-input-content"
        >
          <div
            class="jsx-1220078726 "
            data-test="dhis2-uicore-box"
          >
            <div
              class="jsx-3353877153 jsx-2133963083 input"
              data-test="dhis2-uicore-input"
            >
              <input
                class="jsx-3353877153 jsx-2133963083 "
                id="Dashboard title input"
                name="Dashboard title input"
                placeholder="Untitled dashboard"
                type="text"
                value=""
              />
              <div
                class="jsx-3353877153 jsx-2133963083 status-icon"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="jsx-1141087211 "
        data-test="dashboard-description-input"
      >
        <label
          class="jsx-2718078600 "
          data-test="dashboard-description-input-label"
          for="Dashboard description input"
        >
          <span
            class="jsx-2718078600"
          >
            Dashboard description
          </span>
        </label>
        <div
          class="jsx-3111771310 "
          data-test="dashboard-description-input-content"
        >
          <div
            class="jsx-2954617683 "
            data-test="dhis2-uicore-box"
          >
            <div
              class="jsx-4150870461 jsx-2961587785 textarea"
              data-test="dhis2-uicore-textarea"
            >
              <textarea
                class="jsx-4150870461 jsx-2961587785 "
                id="Dashboard description input"
                name="Dashboard description input"
                rows="4"
              />
              <div
                class="jsx-4150870461 jsx-2961587785 status-icon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="searchContainer"
    >
      <div
        class="layoutWrapper"
      >
        <p
          class="label"
        >
          Layout
        </p>
        <div
          class="layoutOption"
        >
          <svg
            height="42"
            viewBox="0 0 42 42"
            width="42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m42 33v9h-42v-9zm-31-12v7h-11v-7zm15 0v7h-11v-7zm16-21v28h-10v-28zm-16 0v16h-26v-16z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="layoutValue"
          >
            Freeflow
          </span>
          <button
            class="jsx-1937199209 small"
            data-test="dhis2-uicore-button"
            type="button"
          >
            Change layout
          </button>
        </div>
      </div>
      <div
        class="positionWrapper"
      >
        <p
          class="label"
        >
          Add new items to
        </p>
        <div
          class="positionOptions"
        >
          <label
            class="jsx-869913229 dense"
            data-test="dhis2-uicore-radio"
          >
            <input
              checked=""
              class="jsx-869913229"
              name="END"
              type="radio"
              value=""
            />
            <div
              class="jsx-869913229 icon dense"
            >
              <svg
                class="jsx-1659897952 jsx-1631270792 checked"
                viewBox="0 0 14 14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  class="jsx-1659897952 jsx-1631270792 background"
                  cx="7"
                  cy="7"
                  r="7"
                />
                <path
                  class="jsx-1659897952 jsx-1631270792 outer unchecked"
                  d="M7,14 C10.8659932,14 14,10.8659932 14,7 C14,3.13400675 10.8659932,0 7,0 C3.13400675,0 0,3.13400675 0,7 C0,10.8659932 3.13400675,14 7,14 Z M7,13 C3.6862915,13 1,10.3137085 1,7 C1,3.6862915 3.6862915,1 7,1 C10.3137085,1 13,3.6862915 13,7 C13,10.3137085 10.3137085,13 7,13 Z"
                />
                <path
                  class="jsx-1659897952 jsx-1631270792 outer checked"
                  d="M7,14 C10.8659932,14 14,10.8659932 14,7 C14,3.13400675 10.8659932,0 7,0 C3.13400675,0 0,3.13400675 0,7 C0,10.8659932 3.13400675,14 7,14 Z M7,12 C4.23857625,12 2,9.76142375 2,7 C2,4.23857625 4.23857625,2 7,2 C9.76142375,2 12,4.23857625 12,7 C12,9.76142375 9.76142375,12 7,12 Z"
                />
                <circle
                  class="jsx-1659897952 jsx-1631270792 inner"
                  cx="7"
                  cy="7"
                  r="3"
                />
              </svg>
            </div>
            End of dashboard
          </label>
          <label
            class="jsx-869913229 dense"
            data-test="dhis2-uicore-radio"
          >
            <input
              class="jsx-869913229"
              name="START"
              type="radio"
              value=""
            />
            <div
              class="jsx-869913229 icon dense"
            >
              <svg
                class="jsx-1659897952 jsx-1631270792 "
                viewBox="0 0 14 14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  class="jsx-1659897952 jsx-1631270792 background"
                  cx="7"
                  cy="7"
                  r="7"
                />
                <path
                  class="jsx-1659897952 jsx-1631270792 outer unchecked"
                  d="M7,14 C10.8659932,14 14,10.8659932 14,7 C14,3.13400675 10.8659932,0 7,0 C3.13400675,0 0,3.13400675 0,7 C0,10.8659932 3.13400675,14 7,14 Z M7,13 C3.6862915,13 1,10.3137085 1,7 C1,3.6862915 3.6862915,1 7,1 C10.3137085,1 13,3.6862915 13,7 C13,10.3137085 10.3137085,13 7,13 Z"
                />
                <path
                  class="jsx-1659897952 jsx-1631270792 outer checked"
                  d="M7,14 C10.8659932,14 14,10.8659932 14,7 C14,3.13400675 10.8659932,0 7,0 C3.13400675,0 0,3.13400675 0,7 C0,10.8659932 3.13400675,14 7,14 Z M7,12 C4.23857625,12 2,9.76142375 2,7 C2,4.23857625 4.23857625,2 7,2 C9.76142375,2 12,4.23857625 12,7 C12,9.76142375 9.76142375,12 7,12 Z"
                />
                <circle
                  class="jsx-1659897952 jsx-1631270792 inner"
                  cx="7"
                  cy="7"
                  r="3"
                />
              </svg>
            </div>
            Start of dashboard
          </label>
        </div>
      </div>
      <div
        class="searchWrapper"
      >
        <div
          class="item-selector"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TitleBar renders correctly with name and description 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="inputWrapper"
    >
      <div
        class="jsx-1141087211 "
        data-test="dashboard-title-input"
      >
        <label
          class="jsx-2718078600 "
          data-test="dashboard-title-input-label"
          for="Dashboard title input"
        >
          <span
            class="jsx-2718078600"
          >
            Dashboard title
          </span>
        </label>
        <div
          class="jsx-3111771310 "
          data-test="dashboard-title-input-content"
        >
          <div
            class="jsx-1220078726 "
            data-test="dhis2-uicore-box"
          >
            <div
              class="jsx-3353877153 jsx-2133963083 input"
              data-test="dhis2-uicore-input"
            >
              <input
                class="jsx-3353877153 jsx-2133963083 "
                id="Dashboard title input"
                name="Dashboard title input"
                placeholder="Untitled dashboard"
                type="text"
                value="Rainbow Dash"
              />
              <div
                class="jsx-3353877153 jsx-2133963083 status-icon"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="jsx-1141087211 "
        data-test="dashboard-description-input"
      >
        <label
          class="jsx-2718078600 "
          data-test="dashboard-description-input-label"
          for="Dashboard description input"
        >
          <span
            class="jsx-2718078600"
          >
            Dashboard description
          </span>
        </label>
        <div
          class="jsx-3111771310 "
          data-test="dashboard-description-input-content"
        >
          <div
            class="jsx-2954617683 "
            data-test="dhis2-uicore-box"
          >
            <div
              class="jsx-4150870461 jsx-2961587785 textarea"
              data-test="dhis2-uicore-textarea"
            >
              <textarea
                class="jsx-4150870461 jsx-2961587785 "
                id="Dashboard description input"
                name="Dashboard description input"
                rows="4"
              >
                A very colorful pony
              </textarea>
              <div
                class="jsx-4150870461 jsx-2961587785 status-icon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="searchContainer"
    >
      <div
        class="layoutWrapper"
      >
        <p
          class="label"
        >
          Layout
        </p>
        <div
          class="layoutOption"
        >
          <svg
            height="42"
            viewBox="0 0 42 42"
            width="42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m42 33v9h-42v-9zm-31-12v7h-11v-7zm15 0v7h-11v-7zm16-21v28h-10v-28zm-16 0v16h-26v-16z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="layoutValue"
          >
            Freeflow
          </span>
          <button
            class="jsx-1937199209 small"
            data-test="dhis2-uicore-button"
            type="button"
          >
            Change layout
          </button>
        </div>
      </div>
      <div
        class="positionWrapper"
      >
        <p
          class="label"
        >
          Add new items to
        </p>
        <div
          class="positionOptions"
        >
          <label
            class="jsx-869913229 dense"
            data-test="dhis2-uicore-radio"
          >
            <input
              checked=""
              class="jsx-869913229"
              name="END"
              type="radio"
              value=""
            />
            <div
              class="jsx-869913229 icon dense"
            >
              <svg
                class="jsx-1659897952 jsx-1631270792 checked"
                viewBox="0 0 14 14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  class="jsx-1659897952 jsx-1631270792 background"
                  cx="7"
                  cy="7"
                  r="7"
                />
                <path
                  class="jsx-1659897952 jsx-1631270792 outer unchecked"
                  d="M7,14 C10.8659932,14 14,10.8659932 14,7 C14,3.13400675 10.8659932,0 7,0 C3.13400675,0 0,3.13400675 0,7 C0,10.8659932 3.13400675,14 7,14 Z M7,13 C3.6862915,13 1,10.3137085 1,7 C1,3.6862915 3.6862915,1 7,1 C10.3137085,1 13,3.6862915 13,7 C13,10.3137085 10.3137085,13 7,13 Z"
                />
                <path
                  class="jsx-1659897952 jsx-1631270792 outer checked"
                  d="M7,14 C10.8659932,14 14,10.8659932 14,7 C14,3.13400675 10.8659932,0 7,0 C3.13400675,0 0,3.13400675 0,7 C0,10.8659932 3.13400675,14 7,14 Z M7,12 C4.23857625,12 2,9.76142375 2,7 C2,4.23857625 4.23857625,2 7,2 C9.76142375,2 12,4.23857625 12,7 C12,9.76142375 9.76142375,12 7,12 Z"
                />
                <circle
                  class="jsx-1659897952 jsx-1631270792 inner"
                  cx="7"
                  cy="7"
                  r="3"
                />
              </svg>
            </div>
            End of dashboard
          </label>
          <label
            class="jsx-869913229 dense"
            data-test="dhis2-uicore-radio"
          >
            <input
              class="jsx-869913229"
              name="START"
              type="radio"
              value=""
            />
            <div
              class="jsx-869913229 icon dense"
            >
              <svg
                class="jsx-1659897952 jsx-1631270792 "
                viewBox="0 0 14 14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  class="jsx-1659897952 jsx-1631270792 background"
                  cx="7"
                  cy="7"
                  r="7"
                />
                <path
                  class="jsx-1659897952 jsx-1631270792 outer unchecked"
                  d="M7,14 C10.8659932,14 14,10.8659932 14,7 C14,3.13400675 10.8659932,0 7,0 C3.13400675,0 0,3.13400675 0,7 C0,10.8659932 3.13400675,14 7,14 Z M7,13 C3.6862915,13 1,10.3137085 1,7 C1,3.6862915 3.6862915,1 7,1 C10.3137085,1 13,3.6862915 13,7 C13,10.3137085 10.3137085,13 7,13 Z"
                />
                <path
                  class="jsx-1659897952 jsx-1631270792 outer checked"
                  d="M7,14 C10.8659932,14 14,10.8659932 14,7 C14,3.13400675 10.8659932,0 7,0 C3.13400675,0 0,3.13400675 0,7 C0,10.8659932 3.13400675,14 7,14 Z M7,12 C4.23857625,12 2,9.76142375 2,7 C2,4.23857625 4.23857625,2 7,2 C9.76142375,2 12,4.23857625 12,7 C12,9.76142375 9.76142375,12 7,12 Z"
                />
                <circle
                  class="jsx-1659897952 jsx-1631270792 inner"
                  cx="7"
                  cy="7"
                  r="3"
                />
              </svg>
            </div>
            Start of dashboard
          </label>
        </div>
      </div>
      <div
        class="searchWrapper"
      >
        <div
          class="item-selector"
        />
      </div>
    </div>
  </div>
</div>
`;
